--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,30 @@
+# =========================================
+# Application Name
+# =========================================
 spring.application.name=shopkart
 
-# Configuring view components
+# =========================================
+# View Configuration
+# =========================================
 spring.mvc.view.prefix=/view/
 spring.mvc.view.suffix=.jsp
 
-# Database connection settings
-spring.datasource.url=jdbc:mysql://${DATASOURCE_HOST}:${DATASOURCE_PORT}/${DATASOURCE_DB_NAME}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+# =========================================
+# Database Configuration
+# Using environment variables for Docker
+# =========================================
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-# JPA Settings
-spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.properties.hibernate.show_sql=true
+# Hibernate / JPA Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Settings for uploading files
+# =========================================
+# File Upload Settings
+# =========================================
 spring.servlet.multipart.enabled=true
-file.project-path=${PROJECT_PATH}
+file.project-path=${PROJECT_PATH:/usr/src/app}   # Default path if not set
 file.image-path=uploads
