--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.enabled=true
 file.project-path=${PROJECT_PATH:/usr/src/app}   # Default path if not set
 file.image-path=uploads
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
