--- a/.github/workflows/ecommerce.yml
+++ b/.github/workflows/ecommerce.yml
@@ -107,6 +107,8 @@ jobs:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
     needs: [ pushtoDocker ]
+    environment:
+     name: production
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
