--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -91,8 +91,7 @@ jobs:
        username: ${{secrets.DOCKER_USERNAME}}
        password: ${{secrets.DOCKER_PASSWORD}}
    - name: build and psuh
-     run: docker build -t hacked01/shopkart-app:${{ github.sha }} .
-
+     run: docker build -t hacked01/shopkart-app:release-${{ github.ref_name }}-${{ github.sha }} .
    - name: docker list
      run: docker images
 
@@ -108,8 +107,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ pushtoDocker ]
     environment:
-     name: production
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+     name: release
+    if: github.ref == 'refs/heads/release' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -136,6 +135,6 @@ jobs:
       - name: Commit and push changes
         run: |
           git add k8s/ds.yml
-          git commit -m "Update Kubernetes deployment with new image tag: ${{ needs.docker.outputs.image_tag }} [skip ci]" || echo "No changes to commit"
+          git commit -m "Update Kubernetes deployment with new image tag: ${{ github.sha }} [skip ci]" || echo "No changes to commit"
           git pull --rebase origin main || echo "Nothing to pull"
           git push
