--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -96,9 +96,9 @@ jobs:
      run: docker images
 
    - name: push
-     run: docker push hacked01/shopkart-app:${{ github.sha }}
+     run: docker push hacked01/shopkart-app:release-${{ github.ref_name }}-${{ github.sha }}
    - name: docker run
-     run: docker run -d -p 8080:8080 hacked01/shopkart-app:${{ github.sha}}
+     run: docker run -d -p 8080:8080 hacked01/shopkart-app:release-${{ github.ref_name }}-${{ github.sha}}
    - name: docker ls
      run: docker ps -a
 
@@ -122,7 +122,7 @@ jobs:
       
       - name: Update Kubernetes deployment file
         env:
-           IMAGE_TAG: ${{ github.sha }}
+           IMAGE_TAG: release-${{ github.ref_name }}-${{ github.sha }}
            DOCKER_REPO: hacked01/shopkart-app
         run: |
      
