--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,14 +91,14 @@ jobs:
        username: ${{secrets.DOCKER_USERNAME}}
        password: ${{secrets.DOCKER_PASSWORD}}
    - name: build and psuh
-     run: docker build -t hacked01/shopkart-app:release-${{ github.ref_name }}-${{ github.sha }} .
+     run: docker build -t hacked01/shopkart-app:${{ github.ref_name }}-${{ github.sha }} .
    - name: docker list
      run: docker images
 
    - name: push
-     run: docker push hacked01/shopkart-app:release-${{ github.ref_name }}-${{ github.sha }}
+     run: docker push hacked01/shopkart-app:${{ github.ref_name }}-${{ github.sha }}
    - name: docker run
-     run: docker run -d -p 8080:8080 hacked01/shopkart-app:release-${{ github.ref_name }}-${{ github.sha}}
+     run: docker run -d -p 8080:8080 hacked01/shopkart-app:${{ github.ref_name }}-${{ github.sha}}
    - name: docker ls
      run: docker ps -a
 
@@ -122,7 +122,7 @@ jobs:
       
       - name: Update Kubernetes deployment file
         env:
-           IMAGE_TAG: release-${{ github.ref_name }}-${{ github.sha }}
+           IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
            DOCKER_REPO: hacked01/shopkart-app
         run: |
      
