--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,14 +91,15 @@ jobs:
        username: ${{secrets.DOCKER_USERNAME}}
        password: ${{secrets.DOCKER_PASSWORD}}
    - name: build and psuh
-     run: docker build -t hacked01/shopkart-app:${{ github.ref_name }}-${{ github.sha }} .
-   - name: docker list
-     run: docker images
+     run: |
+       DATE=$(date +%Y%m%d)
+       IMAGE_TAG=${GITHUB_REF_NAME}-${DATE}-${GITHUB_SHA::7}
+       echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-   - name: push
-     run: docker push hacked01/shopkart-app:${{ github.ref_name }}-${{ github.sha }}
-   - name: docker run
-     run: docker run -d -p 8080:8080 hacked01/shopkart-app:${{ github.ref_name }}-${{ github.sha}}
+       docker build -t hacked01/shopkart-app:${IMAGE_TAG} .
+       docker push hacked01/shopkart-app:${IMAGE_TAG}
+       docker run -d -p 8080:8080 hacked01/shopkart-app:${IMAGE_TAG}
+       docker ps -a
    - name: docker ls
      run: docker ps -a
 
@@ -122,7 +123,7 @@ jobs:
       
       - name: Update Kubernetes deployment file
         env:
-           IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
+           IMAGE_TAG: ${{ env.IMAGE_TAG }}
            DOCKER_REPO: hacked01/shopkart-app
         run: |
      
@@ -135,7 +136,7 @@ jobs:
       - name: Commit and push changes
         run: |
           git add k8s/ds.yml
-          git commit -m "Update Kubernetes deployment with new image tag: ${{ github.sha }} [skip ci]" || echo "No changes to commit"
+          git commit -m "Update Kubernetes deployment with new image tag: ${{ env.IMAGE_TAG }} [skip ci]" || echo "No changes to commit"
           git push origin HEAD:release
           
           
