--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -92,9 +92,9 @@ jobs:
        password: ${{secrets.DOCKER_PASSWORD}}
    - name: build and psuh
      run: |
-       DATE=$(date +%Y%m%d)
-       IMAGE_TAG=${GITHUB_REF_NAME}-${DATE}-${GITHUB_SHA::7}
-       echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+      DATE=$(date +%Y%m%d)
+      IMAGE_TAG=release-${DATE}-${GITHUB_SHA::7}
+      echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
        docker build -t hacked01/shopkart-app:${IMAGE_TAG} .
        docker push hacked01/shopkart-app:${IMAGE_TAG}
