--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -95,6 +95,7 @@ jobs:
       DATE=$(date +%Y%m%d)
       IMAGE_TAG=release-${DATE}-${GITHUB_SHA::7}
       echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+      echo "IMAGE_TAG set to $IMAGE_TAG"
 
        docker build -t hacked01/shopkart-app:${IMAGE_TAG} .
        docker push hacked01/shopkart-app:${IMAGE_TAG}
