--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,7 +103,8 @@ jobs:
       docker ps -a
    - name: docker ls
      run: docker ps -a
-
+     
+      echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_OUTPUT
   update-k8s:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
@@ -124,7 +125,7 @@ jobs:
       
       - name: Update Kubernetes deployment file
         env:
-           IMAGE_TAG: ${{ env.IMAGE_TAG }}
+           IMAGE_TAG: ${{ needs.pushtoDocker.outputs.IMAGE_TAG }}}
            DOCKER_REPO: hacked01/shopkart-app
         run: |
      
