--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -90,7 +90,8 @@ jobs:
      with:
        username: ${{secrets.DOCKER_USERNAME}}
        password: ${{secrets.DOCKER_PASSWORD}}
-   - name: build and psuh
+   - name: build and push
+     id: docker_build
      run: |
       DATE=$(date +%Y%m%d)
       IMAGE_TAG=release-${DATE}-${GITHUB_SHA::7}
@@ -101,10 +102,11 @@ jobs:
       docker push hacked01/shopkart-app:${IMAGE_TAG}
       docker run -d -p 8080:8080 hacked01/shopkart-app:${IMAGE_TAG}
       docker ps -a
+      echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_OUTPUT
    - name: docker ls
      run: docker ps -a
      
-      echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_OUTPUT
+      
   update-k8s:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
@@ -125,7 +127,7 @@ jobs:
       
       - name: Update Kubernetes deployment file
         env:
-           IMAGE_TAG: ${{ needs.pushtoDocker.outputs.IMAGE_TAG }}}
+           IMAGE_TAG: ${{ needs.pushtoDocker.outputs.IMAGE_TAG }}
            DOCKER_REPO: hacked01/shopkart-app
         run: |
      
