--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -68,6 +68,8 @@ jobs:
       
   pushtoDocker:
    runs-on: ubuntu-latest
+   outputs:
+    IMAGE_TAG: ${{ steps.docker_build.outputs.IMAGE_TAG }}
    needs: Test
 
    steps:
